--- a/src/mytunes-front/src/style/components/savedPlaylists.css
+++ b/src/mytunes-front/src/style/components/savedPlaylists.css
@@ -11,6 +11,9 @@
     padding : 0;
     cursor : pointer;
 }
+.rst__rowWrapper.selected .rst__rowContents {
+    background-color : #dde7ff !important;
+}
 
 .rst__rowContents {
     width : 250px;
