--- a/src/mytunes-front/src/style/components/savedPlaylists.css
+++ b/src/mytunes-front/src/style/components/savedPlaylists.css
@@ -36,11 +36,14 @@
     color : grey;
 }
 
+#savedPlaylists header div.textField {
+    width : 100% !important;
+}
 #savedPlaylists header input {
-    width : 100%;
+    width : 100% !important;
     margin-bottom : 5px;
-    font-size : 20px;
-    font-weight : bold;
+    font-size : 20px !important;
+    font-weight : bold !important;
     text-align : center;
     border : none;
     background : transparent;
