--- a/src/mytunes-front/src/style/components/playlistMenu.css
+++ b/src/mytunes-front/src/style/components/playlistMenu.css
@@ -69,6 +69,7 @@
     width : 100% !important;
 }
 
+#playlistMenuHeaderTitle #newPlaylist,
 #playlistMenuHeaderTitle .textField input {
     text-align : center;
     font-size : 20px;
@@ -80,6 +81,13 @@
 #playlistMenuHeaderRightButtons button {
     margin : 0 3px !important;
 }
+
+#playlistMenuHeaderTitle #newPlaylist {
+    display : inline-block;
+    width : 100%;
+    font-style : italic;
+}
+
 
 
 
