--- a/src/mytunes-front/src/style/components/savedPlaylists.css
+++ b/src/mytunes-front/src/style/components/savedPlaylists.css
@@ -2,8 +2,33 @@
     height : calc(100vh - var(--lecteur-height));
 }
 
-.rst__tree {
+#savedPlaylistTree {
     width: 50%;
+    height : 100%;
+    display: inline-block;
+}
+
+.addPlaylist {
+    height : 50px;
+    width: 100%;
+    display: inline-block;
+    padding : 0 15px;
+    box-sizing: border-box;
+}
+.addPlaylist .textField {
+    width : calc(100% - 120px) !important;
+}
+.addPlaylist .newPlaylistButton {
+    width : 100px;
+    margin-left : 15px;
+}
+.addPlaylist .newPlaylistButton span {
+    padding : 0;
+}
+
+.rst__tree {
+    width: 100%;
+    height : calc(100% - 50px) !important;
     display: inline-block;
 }
 
@@ -91,9 +116,15 @@
 
 #musiquesPlaylist span.noData { font-weight : bold; font-size : 14px; }
 
-#musiquesPlaylist li span.musiqueCell { display : table-cell; }
+#musiquesPlaylist li span.musiqueCell {
+    display : inline-block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    vertical-align: middle;
+}
 
-#musiquesPlaylist li span.titre { width : calc(100% - 235px); padding : 0 3px; }
+#musiquesPlaylist li span.titre { width : calc(100% - 242px); padding : 0 3px; }
 #musiquesPlaylist li span.bpm { width : 50px; text-align : center; }
 #musiquesPlaylist li span.classement { width : 75px; text-align : center; }
 #musiquesPlaylist li span.duree { width : 75px; text-align : center; }
