--- a/src/mytunes-front/src/style/components/loading.css
+++ b/src/mytunes-front/src/style/components/loading.css
@@ -22,6 +22,20 @@
     display : none;
 }
 
+#loadingClose {
+    position : fixed;
+    top : 20px;
+    right : 20px;
+    cursor : pointer;
+}
+
+#loadingClose .material-icons {
+    font-size : 50px !important;
+    color : white !important;
+    font-weight : bold;
+    padding : 10px;
+}
+
 #loadingContent {
     position : fixed;
     top : 50%;
@@ -46,7 +60,7 @@
     border-radius: 50%;
     background: #fff;
     animation-timing-function: cubic-bezier(0, 1, 1, 0);
-    box-shadow : 1px 1px 0 black;
+    box-shadow : 1px 2px 0 black;
 }
 .lds-ellipsis div:nth-child(1) {
     left: 0;
