--- a/src/mytunes-front/src/style/components/mobile/main.css
+++ b/src/mytunes-front/src/style/components/mobile/main.css
@@ -2,93 +2,13 @@
     box-sizing: border-box;
 }
 
-
-#mainPageContent, #volumeSlider {
-    height: 100%;
-    vertical-align: top;
-}
-
 #mainPageContent {
-    width : 79%;
-    float : left;
+    min-height: 100%;
+    vertical-align: top;
+    width : 80%;
     border : 2px solid green;
 }
 
-.toolbar__title {
-    text-align : center;
-}
-
-.toolbar__right {
-    text-align : center;
-}
-
-.switch {
-    vertical-align: middle;
-}
-
-#volumeSlider {
-    width : 20%;
-    float : right;
-    z-index : 9999;
-    box-shadow : 0 1px 5px rgba(0, 0, 0, .3);
-    background-color : #FFF;
-}
-
-.bottom-bar {
-    box-shadow : 0 -1px 5px rgba(0, 0, 0, .3);
-    height : 55px;
-}
-
-.bottom-bar .button--material {
-    height : 100%;
-}
-
-.zmdi {
-    height : 55px;
-    line-height : 55px;
-}
-
-.zmdi:before {
-    font-size: 30px;
-    color: black;
-    vertical-align: middle;
-}
-
-div#bottomPlayerSlider {
-    display : inline-block;
-    height: 100%;
-    vertical-align: top;
-}
-
-div#bottomPlayerSlider label {
-    float : left;
-    width : 100%;
-    text-align : center;
-    font-size : 12px;
-    line-height: 20px;
-}
-div#bottomPlayerSlider .range--material {
-    float : left;
-    // vertical-align: middle;
-    width : 100%;
-}
-
-
-.rangeSlider {
-    width : 100%;
-    height : 100%;
-    display : flex;
-}
-
-.rangeSlider input[type=range] {
-    margin : auto;
-    -webkit-appearance: none;
-    width : 100%;
-    height : 80%;
-    border-radius: 5px;
-    background: #ccc;
-    outline: none;
-    writing-mode: bt-lr; /* IE */
-    -webkit-appearance: slider-vertical; /* WebKit */
-
+.page__content {
+    height : 529px;
 }
