--- a/src/mytunes-front/src/style/components/mobile/volumeSlider.css
+++ b/src/mytunes-front/src/style/components/mobile/volumeSlider.css
@@ -11,3 +11,22 @@
     box-shadow : 0 1px 5px rgba(0, 0, 0, .3);
     background-color : #FFF;
 }
+
+.rangeSlider {
+    width : 100%;
+    height : 100%;
+    display : flex;
+}
+
+.rangeSlider input[type=range] {
+    margin : auto;
+    -webkit-appearance: none;
+    width : 100%;
+    height : 85%;
+    border-radius: 5px;
+    background: #ccc;
+    outline: none;
+    writing-mode: bt-lr; /* IE */
+    -webkit-appearance: slider-vertical; /* WebKit */
+
+}
