--- a/src/mytunes-front/src/app/pages/initApp/init.css
+++ b/src/mytunes-front/src/app/pages/initApp/init.css
@@ -12,3 +12,10 @@
     height : 25px;
     vertical-align: sub;
 }
+
+.notification {
+    height: auto !important;
+    white-space : normal !important;
+    display: block !important;
+    text-align: left !important;
+}
