--- a/src/mytunes-front/src/style/components/mobile/main.css
+++ b/src/mytunes-front/src/style/components/mobile/main.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 
-#mainPageContent {
+#mobile_mainPageContent {
     min-height: 100%;
     vertical-align: top;
     width : 80%;
