--- a/src/mytunes-front/src/app/common/components/loadPlaylistDialog/style/treeView.css
+++ b/src/mytunes-front/src/app/common/components/loadPlaylistDialog/style/treeView.css
@@ -16,7 +16,7 @@
     vertical-align: middle;
     font-size : 20px !important;
     color : #474747 !important;
-    padding-right : 5px;
+    margin-right : 5px;
 }
 
 .playlistTreeView .tree-node .nbMusiques {
