--- a/src/mytunes-front/src/app/common/components/musiqueTable/tableMusiques.css
+++ b/src/mytunes-front/src/app/common/components/musiqueTable/tableMusiques.css
@@ -43,7 +43,8 @@
 }
 
 .VirtualizeTable .tableCell.action button span {
-    font-size : 18px !important;
+    font-size : 22px !important;
+    line-height : 22px !important;
 }
 
 .VirtualizeTable .textField {
