refacto(mui) Load playlist dialog

--- a/src/mytunes-front/src/app/common/components/loadPlaylistDialog/style/loadPlaylistDialog.css
+++ b/src/mytunes-front/src/app/common/components/loadPlaylistDialog/style/loadPlaylistDialog.css
@@ -1,3 +1,8 @@
+.loadPlaylistDialog_paper {
+    max-width: unset !important;
+    width : 75%;
+}
+
 .loadPlaylistDialog header h3 {
     display: inline-block;
 }
